adds bootstrap styling

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,6 +7,8 @@
     <title>HOME</title>
 </head>
 <body>
-    
+    DASHBOARD
+    <a><button>Pre-made</button></a>
+    <a><button>User Created</button></a>
 </body>
 </html>
