--- a/views/core.ejs
+++ b/views/core.ejs
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>core</title>
 </head>
 <body>
-    DASHBOARD
-    <a href="/premade"><button>Pre-made</button></a>
-    <a><button>User Created</button></a>
+  <%  for (exercise of coreExercises) { %>
+    
+    <h3><%= exercise.name %></h3>
+    
+  <%}%>
 </body>
 </html>
