connects partials and adds exercises to seed route

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
-</head>
-<body>
+<%- include ("./header.ejs") %>
+
+<main>
     DASHBOARD
     <a href="/premade"><button>Pre-made</button></a>
     <a><button>User Created</button></a>
+</main>
 </body>
 </html>
