--- a/views/legs.ejs
+++ b/views/legs.ejs
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>legs</title>
-</head>
-<body>
+<%- include ("./header.ejs") %>
+
+<main>
   <%  for (exercise of legsExercises) { %>
     
     <h3><%= exercise.name %></h3>
     
   <%}%>
+</main>
 </body>
 </html>
