adds show page to user created exercises

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,7 +3,7 @@
 <main>
     DASHBOARD
     <a href="/premade"><button>Pre-made</button></a>
-    <a><button>User Created</button></a>
+    <a href="/user-created"><button>User Created</button></a>
 </main>
 </body>
 </html>
