adds bootstrap navbar and links home and categories

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,9 @@
 <%- include ("./header.ejs") %>
-    <h1>Select an option to begin Training with Fury!</h1>
-    <a href = "./auth/login"><button class="btn btn-primary btn-lg" >Login</button></a>
-    <a href = "./auth/signup"><button class="btn btn-primary btn-lg" >Sign-up</button></a>
+    
+    <div id="login">
+    <a href = "./auth/login"><button class="btn btn-primary btn-sm">Login</button></a>
+    <a href = "./auth/signup"><button class="btn btn-primary btn-sm">Sign-up</button></a>
+  </div>
     <main>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
