--- a/views/image_index.ejs
+++ b/views/image_index.ejs
@@ -4,7 +4,7 @@
 
         <h2>
             <%= exercise.name %>
-            <img src="<%= exercise.img%>">
+            <img class = "index-img" src="<%= exercise.img%>">
         </h2>
 
         <%}%>
