CRUD routes working, categories added to navbar

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -20,19 +20,20 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Today's Workout</a>
+            <a class="nav-link" href="/today">Today's Workout</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">User Generated Exercises</a>
+            <a class="nav-link" href="/user/created">User Generated Exercises</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Catrgories
+              Categories
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/arms">Upper Body</a></li>
               <li><a class="dropdown-item" href="/legs">Lower Body</a></li>
               <li><a class="dropdown-item" href="/core">Core</a></li>
+              <li><a class="dropdown-item" href="/premade">Show all</a></li>
             </ul>
           </li>
         </ul>
