--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,7 +6,8 @@
         <label>Description:<input type="text" name="description" placeholder="Enter a description"></label><br>
         <label>Tags (separate by comma):<input type="text" name="tags" placeholder="tags"></label><br>
         <label>Image:<input type="text" name="img" placeholder="image url"></label>
-        <input type="submit" value="add">
+        <br>
+        <input type="submit" value="Add to User List">
 
     </form>
 </main>
