--- a/views/userCreated.ejs
+++ b/views/userCreated.ejs
@@ -7,3 +7,8 @@
         <a href="/user/<%=exercise._id%>" ><h3><%= exercise.name %></h3></a>
 
 <%}%>
+
+<a href="/user/add-new"><button>Add New Exercise</button></a>
+
+</body>
+</html>
