styles exercise library into cards

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,13 +27,21 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Categories
+              Exercise by Category
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/arms">Upper Body</a></li>
               <li><a class="dropdown-item" href="/legs">Lower Body</a></li>
               <li><a class="dropdown-item" href="/core">Core</a></li>
               <li><a class="dropdown-item" href="/premade">Show all</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Workouts
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Quad-Mania</a></li>
             </ul>
           </li>
         </ul>
