--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,7 +5,7 @@
         <label>Name:<input type="text" name="name" placeholder="Exercise Name" /></label><br>
         <label>Description:<input type="text" name="description" placeholder="Enter a description"></label><br>
         <label>Tags (separate by comma):<input type="text" name="tags" placeholder="tags"></label><br>
-        <label>Image:<input type="text" name="img" placeholder="image url"></label>
+        <label>Image URL:<input type="text" name="img" placeholder="Leave blank if none"></label>
         <br>
         <input type="submit" value="Add to User List">
 
