--- a/views/premade_index.ejs
+++ b/views/premade_index.ejs
@@ -1,11 +1,26 @@
 <%- include ("./header.ejs") %>
     <h2>Current exercises in this library:</h2>
-    <% for (exercise of exercises){ %>
+    
+    <div class="row row-cols-2 row-cols-md-4 g-4 ">
 
-        <h2>
-            <a href="<%= exercise._id %>"><%= exercise.name %></a>
-        </h2>
+         <% for (exercise of exercises){ %>
+        <div class="col">
+          <div class="card h-100">
+            
+            <div class="card-body">
+              <h5 class="card-title"><%= exercise.name%></h5>
+              <img src="<%=exercise.img%>" class="card-img-top" alt="...">
+              <p class="card-text"><%=exercise.description%></p>
+            </div>
+            <a href="<%=exercise._id%>" class="btn btn-primary">View Details</a>
+          </div>
+        </div>
+         <%}%>
+        
+        
+       
+      </div>
 
-        <%}%>
+
 </body>
 </html>
