--- a/views/legs.ejs
+++ b/views/legs.ejs
@@ -1,11 +1,20 @@
 <%- include ("./header.ejs") %>
 
-<main>
-  <%  for (exercise of legsExercises) { %>
-    
-    <h3><%= exercise.name %></h3>
-    
+<div class="row row-cols-2 row-cols-md-4 g-4 ">
+
+  <% for (exercise of legsExercises){ %>
+ <div class="col">
+   <div class="card h-100">
+     
+     <div class="card-body">
+       <h5 class="card-title"><%= exercise.name%></h5>
+       <img src="<%=exercise.img%>" class="card-img-top" alt="...">
+       <p class="card-text"><%=exercise.description%></p>
+     </div>
+     <a href="<%=exercise._id%>" class="btn btn-primary">View Details</a>
+   </div>
+ </div>
   <%}%>
-</main>
+</div>
 </body>
 </html>
