--- a/views/userCreated.ejs
+++ b/views/userCreated.ejs
@@ -1,14 +1,31 @@
 <%- include ("./header.ejs") %>
 
 <h2>User created exercises:</h2>
-
-<% for (exercise of userExercises) { %>
-
-        <a href="/user/<%=exercise._id%>" ><h3><%= exercise.name %></h3></a>
-
-<%}%>
-
 <a href="/user/add-new"><button>Add New Exercise</button></a>
+
+<div class="row row-cols-2 row-cols-md-4 g-4 ">
+
+        <% for (exercise of userExercises){ %>
+       <div class="col">
+         <div class="card h-100">
+           
+           <div class="card-body">
+             <h5 class="card-title"><%= exercise.name%></h5>
+             <img src="<%=exercise.img%>" class="card-img-top" alt="...">
+             <p class="card-text"><%=exercise.description%></p>
+           </div>
+           <a href="<%=exercise._id%>" class="btn btn-primary">View Details</a>
+         </div>
+       </div>
+        <%}%>
+</div>
+
 
 </body>
 </html>
+
+ 
+
+       
+      
+    
