consolidates exercise routes to exercises router

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -3,7 +3,7 @@
 <main>
 
     <div class="input-group mb-3">
-        <form action="/user/add-new" method="post">
+        <form action="/exercises/add-new" method="post">
             <span class="input-group-text" id="inputGroup-sizing-default">Name</span>
             <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" name="name" placeholder="Exercise Name">
 
@@ -24,3 +24,6 @@
     </div>
 
 </main>
+
+</body>
+</html>
