--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,6 +1,6 @@
 <%- include ("./header.ejs") %>
 
-<form action="/user/<%= exercise._id %>?_method=PUT" method="post">
+<form action="/exercises/<%= exercise._id %>?_method=PUT" method="post">
     <label>Name:<input type="text" name="name" placeholder="Exercise Name" value="<%=exercise.name%>"/></label><br>
     <label>Description:<input type="text" name="description" placeholder="Enter a description" value="<%=exercise.description%>"></label><br>
     <label>Tags (separate by comma):<input type="text" name="tags" placeholder="tags" value="<%=exercise.tags%>"></label><br>
