changes style to dark mode, adds workout router

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,20 +20,20 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/today">Today's Workout</a>
+            <a class="nav-link" href="/exercises/today">Today's Workout</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/user/created">User Generated Exercises</a>
+            <a class="nav-link" href="/exercises">User Generated Exercises</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Exercise by Category
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/arms">Upper Body</a></li>
-              <li><a class="dropdown-item" href="/legs">Lower Body</a></li>
-              <li><a class="dropdown-item" href="/core">Core</a></li>
-              <li><a class="dropdown-item" href="/premade">Show all</a></li>
+              <li><a class="dropdown-item" href="/exercises/arms">Upper Body</a></li>
+              <li><a class="dropdown-item" href="/exercises/legs">Lower Body</a></li>
+              <li><a class="dropdown-item" href="/exercises/core">Core</a></li>
+              <li><a class="dropdown-item" href="/exercises/premade">Show all</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -41,7 +41,7 @@
               Workouts
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Quad-Mania</a></li>
+              <li><a class="dropdown-item" href="/workouts/quadmania">Quad-Mania</a></li>
             </ul>
           </li>
         </ul>
