--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,7 +12,7 @@
 
             <br>
             <span class="input-group-text" id="inputGroup-sizing-default">Image URL</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" name="img" placeholder="Leave blank if none">
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" name="img" placeholder="Leave blank if none" value="">
 
             <br>
             <span class="input-group-text" id="inputGroup-sizing-default">Description</span>
