removes workouts model and premads models

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -33,7 +33,7 @@
               <li><a class="dropdown-item" href="/exercises/arms">Upper Body</a></li>
               <li><a class="dropdown-item" href="/exercises/legs">Lower Body</a></li>
               <li><a class="dropdown-item" href="/exercises/core">Core</a></li>
-              <li><a class="dropdown-item" href="/exercises/premade">Show all</a></li>
+              <li><a class="dropdown-item" href="/exercises">Show all</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
