--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,14 @@
 .btn{
 }
 
+@media (max-width: 391px) {
+    #cards{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .col{
+      width: 80%;  
+    }
+    
+}
