--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include ("./header.ejs") %>
     <h2>Current exercises in this library:</h2>
     
-    <div class="row row-cols-2 row-cols-md-4 g-4 ">
+    <div id = "cards" class="row row-cols-2 row-cols-md-4 g-4 ">
 
          <% for (exercise of exercises){ %>
         <div class="col">
