adds logo to header and moves login/signup buttons

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,7 +13,7 @@
     <!-- bootsrtap navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">FURY</a>
+      <a class="navbar-brand" href="/"><img class="logo" src = "../images/TWFlogo.PNG"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,6 +44,10 @@
               <li><a class="dropdown-item" href="/workouts/quadmania">Quad-Mania</a></li>
             </ul>
           </li>
+          <div id="login">
+            <a href = "./auth/login"><button class="btn btn-primary btn-sm">Login</button></a>
+            <a href = "./auth/signup"><button class="btn btn-primary btn-sm">Sign-up</button></a>
+          </div>
         </ul>
       </div>
     </div>
