--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,7 +13,7 @@
     <!-- bootsrtap navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img class="logo" src = "/css/TWFlogo.PNG"></a>
+      <a class="navbar-brand" href="/"><img class="logo" src = "https://i.imgur.com/66fJ6Ao.png"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
