--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,51 @@
+:root {
+    --bs-blue: #0d6efd;
+    --bs-indigo: #d8f210;
+    --bs-purple: #6f42c1;
+    --bs-pink: #d63384;
+    --bs-red: #dc3545;
+    --bs-orange: #fd7e14;
+    --bs-yellow: #ffc107;
+    --bs-green: #198754;
+    --bs-teal: #20c997;
+    --bs-cyan: #0dcaf0;
+    --bs-white: #fff;
+    --bs-gray: #6c757d;
+    --bs-gray-dark: #343a40;
+    --bs-primary: #0d6efd;
+    --bs-secondary: #6c757d;
+    --bs-success: #198754;
+    --bs-info: #0dcaf0;
+    --bs-warning: #ffc107;
+    --bs-danger: #dc3545;
+    --bs-light: #f8f9fa;
+    --bs-dark: #212529;
+    --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+  }
+
 #nav{
     color: pink !important; 
 }
 
-.index-img{
-    width: 100px;
+.show-img{
+    width: 400px;
+}
+
+.btn{
+    background-color: rgb(118, 81, 152);
+    border-color: rgb(118, 81, 152);
+    --bs-btn-hover-bg: rgb(82, 55, 107);
+    --bs-btn-hover-border-color: rgb(82, 55, 107);   
+}
+.nav-link{
+    color:  rgb(118, 81, 152);
+}
+
+.accordion-button:not(.collapsed) {
+    color: darkgray;
+    background-color: rgba(62, 42, 81, 0.656);
 }
 
 .logo{
