adds user to created exercise

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -45,10 +45,11 @@
             </ul>
           </li>
           <div id="login">
-            <a href = "./auth/login"><button class="btn btn-primary btn-sm">Login</button></a>
-            <a href = "./auth/signup"><button class="btn btn-primary btn-sm">Sign-up</button></a>
+            <a href = "/exercises/auth/login"><button class="btn btn-primary btn-sm">Login</button></a>
+            <a href = "/exercises/auth/signup"><button class="btn btn-primary btn-sm">Sign-up</button></a>
           </div>
         </ul>
       </div>
+      <%= user.username%>
     </div>
   </nav>
