--- a/views/new.ejs
+++ b/views/new.ejs
@@ -17,6 +17,8 @@
             <br>
             <span class="input-group-text" id="inputGroup-sizing-default">Description</span>
             <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" name="description" placeholder="Enter a description">
+            
+            <input value = "<%=user.id%>" name="user">
 
             <br>
             <input type="submit" value="Add to User List">
