--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,6 +13,7 @@
   </div>
   <div class="card-body">
     <h5 class="card-title"><%= exercise.name%></h5>
+    <p> user: <%= exercise.user.username %></p>
     <p class="card-text"><%=exercise.description%></p>
     <img class = "show-img" src="<%=exercise.img%>" >
     <br>
