--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include ("./header.ejs") %>
+<% console.log(exercises) %>
     <h2>Current exercises in this library:</h2>
     
     <div id = "cards" class="row row-cols-2 row-cols-md-4 g-4 ">
