adds logout route and requires user to be loged in to add exercise

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -50,6 +50,8 @@
           </div>
         </ul>
       </div>
-      <%= user.username%>
+      <div>
+        <a href = "/exercises/auth/logout"><button class="btn btn-primary btn-sm">Logout</button></a>
+      </div>
     </div>
   </nav>
