--- a/views/userExercisesIndex.ejs
+++ b/views/userExercisesIndex.ejs
@@ -1,3 +1,11 @@
-<%= user.username %>
+<%- include ("header.ejs") %>
 
+<% if(loggedIn){%>
+<%= user.username %>
 <%= userExercises %>
+<%}%>
+
+
+
+</body>
+</html>
