--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 
          <% for (exercise of exercises){ %>
         <div class="col">
-          <div class="card h-100">
+          <div class="card h-100 overflow-auto">
             
             <div class="card-body">
               <h5 class="card-title"><%= exercise.name%></h5>
