--- a/views/userExercisesIndex.ejs
+++ b/views/userExercisesIndex.ejs
@@ -1,10 +1,29 @@
 <%- include ("header.ejs") %>
 
 <% if(loggedIn){%>
-<%= user.username %>
-<%= userExercises %>
+    Exercises Created by: <%= user.username %>
 <%}%>
 
+<a href="/exercises/add-new" ><button class="btn btn-primary btn-sm">+</button></a>
+<div id = "cards" class="row row-cols-2 row-cols-md-4 g-4 ">
+
+   <% for (exercise of exercises){ %>
+  <div class="col">
+    <div class="card h-100">
+      
+      <div class="card-body">
+        <h5 class="card-title"><%= exercise.name%></h5>
+        <img src="<%=exercise.img%>" class="card-img-top" alt="...">
+        <p class="card-text"><%=exercise.description%></p>
+      </div>
+      <a href="/exercises/<%=exercise.id%>" class="btn btn-primary">View Details</a>
+    </div>
+  </div>
+   <%}%>
+  
+  
+ 
+</div>
 
 
 </body>
