adds user object to header.ejs

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -64,7 +64,9 @@
         </ul>
       </div>
     </div>
+    <% if(loggedIn) {%>
     <div id="nav-username">
       <%= user.username %>
     </div>
+    <%}%>
   </nav>
