--- a/views/show.ejs
+++ b/views/show.ejs
@@ -25,10 +25,12 @@
           <%}%>
           <p class="card-text"><%=exercise.description%></p>
           <br>
+          <% if(usersExercise){%>
           <a href="/exercises/<%= exercise._id %>/edit"><button class="btn">Edit this exercise</button></a>
           <form action="/exercises/<%= exercise._id %>?_method=DELETE" method="POST">
             <input type="submit" value="Delete" class="btn"/>
           </form>
+          <%}%>
         </div>
         <div class="col-sm">
           <img class = "show-img" src="<%=exercise.img%>" >
