--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,6 @@
 <%- include ("../header.ejs") %>
 <body>
-
+<h2>Login:</h2>
     <form action="./login" method="post">
     <div class="input-group input-group-sm mb-3">
         <span class="input-group-text" id="inputGroup-sizing-sm">Username</span>
