--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,6 +1,6 @@
 <%- include ("../header.ejs") %>
 <body>
-
+<h2>Sign-Up:</h2>
     <form action="/exercises/auth/signup" method="post">
     <div class="input-group input-group-sm mb-3">
         <span class="input-group-text" id="inputGroup-sizing-sm">Username</span>
@@ -12,6 +12,8 @@
       </div>
       <input type="submit" value="signup"/>
     </form>
+
+ 
 
 
 </body>
