--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,3 +8,31 @@
     <input type="submit" value="Update">
 
 </form>
+
+<main>
+
+    <div class="input-group mb-3">
+        <form action="/exercises/<%= exercise._id %>?_method=PUT" method="post">
+            <span class="input-group-text" id="inputGroup-sizing-default">Name:</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" name="name" placeholder="Exercise Name" value="<%=exercise.name%>">
+
+            <span class="input-group-text" id="inputGroup-sizing-default">Tags (separate by comma):</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" name="tags" placeholder="tags" value="<%=exercise.tags%>">
+
+            <br>
+            <span class="input-group-text" id="inputGroup-sizing-default">Image URL:</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" name="img" placeholder="Leave blank if none" value="<%=exercise.img%>">
+
+            <br>
+            <span class="input-group-text" id="inputGroup-sizing-default">Description:</span>
+            <textarea type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" name="description" placeholder="Enter a description"><%=exercise.description%></textarea>
+            
+            <br>
+            <input type="submit" value="Update">
+        </form>
+    </div>
+
+</main>
+
+</body>
+</html>
