--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,5 +1,11 @@
 <%- include ("../header.ejs") %>
+<script>
+  document.getElementById("signupButton")
+</script>
 <body>
+  <% if(takenUsername) {%>
+    <h3>Username already taken</h3>
+    <%}%>
 <h2>Sign-Up:</h2>
     <form action="/exercises/auth/signup" method="post">
     <div class="input-group input-group-sm mb-3">
@@ -10,7 +16,7 @@
         <span class="input-group-text" id="inputGroup-sizing-sm">Password</span>
         <input type="password" name="password" placeholder="enter password"/>
       </div>
-      <input type="submit" value="signup"/>
+      <input type="submit" value="signup" id = "signupButton" />
     </form>
 
  
