--- a/views/header.ejs
+++ b/views/header.ejs
@@ -55,7 +55,9 @@
             <a href = "/exercises/auth/login"><button class="btn btn-primary btn-sm">Login</button></a>
             <a href = "/exercises/auth/signup"><button class="btn btn-primary btn-sm">Sign-up</button></a>
             <%}%>
+            <% if(loggedIn) {%>
             <a href = "/exercises/auth/logout"><button class="btn btn-primary btn-sm">Logout</button></a>
+            <%}%>
         </div>
         </li>
         <li class="nav-item nav-link disabled">
