adds ERD ro README.MD

--- a/views/today.ejs
+++ b/views/today.ejs
@@ -2,4 +2,23 @@
 
 <main>Christy's workout for the day:</main>
 
-*** populate with my daily exercise***
+<h2>Theme: Full Body Burn</h2>
+<h3>Warm Up </h3>
+    <ul>
+        <a href="#"><li>Inchworms</li>
+        <a href="#"><li>Air Squats</li></a>
+        <a href="#"><li>Plank To Pike Toe Touches</li></a>
+    </ul>
+
+<h3>Main Work</h3>
+    <ul>
+        <li>5x5: <a href="#">barbell squats</li></a>
+        <li>3 Rounds: <a href="#">x5 OHP, x5 </li></a>
+        <li>3x10: <a href="#">Cable Rows</li></a>
+        <li>3x10: <a href="#">Tricep Pull Downs</li></a>
+    </ul>
+
+<h3>AfterBurner</h3>
+    <a href="#"><li>1 min plank shoulder taps</li></a>
+    <a href="#"><li>Penguin Drill</li></a>
+    <a href="#"><li>Supine Leg Lowers</li></a>
