--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,6 +11,7 @@
     <link href="/css/style.css" rel="stylesheet" />
     </head>
   <body>
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
     <!-- bootsrtap navbar -->
@@ -27,7 +28,7 @@
           </li>
           <% if(loggedIn){%>
           <li class="nav-item">
-            <a class="nav-link" href="/exercises/usercreated">User Generated Exercises</a>
+            <a class="nav-link" href="/exercises/usercreated">My Exercises</a>
           </li>
           <%}%>
           <li class="nav-item dropdown">
@@ -47,6 +48,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/workouts/quadmania">Quad-Mania</a></li>
+              <li><a class="dropdown-item" href="/workouts/bouldershoulders">Boulder Shoulders</a></li>
             </ul>
           </li>
             <li class="nav-item">
@@ -68,7 +70,7 @@
     </div>
     <% if(loggedIn) {%>
     <div id="nav-username">
-      <%= user.username %>
+    Logged in as:  <%= user.username %>
     </div>
     <%}%>
   </nav>
